<resources>
    <string name="app_name">Rankers Point</string>
    <string name="fb_app_id">190816248246245</string>
    <string name="track_selection_title">Video Quality</string>
    <string name="app_title">Rankers Point</string>
    <string name="app_name_new"><b>Rankers Point</b></string>
    <string name="app_title_expand">Rankers Point</string>
    <string name="Version">Version </string>
    <string name="install">Install Rankers Point Academy app on Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_icon">menu icon</string>
    <string name="fill_name">Please fill your name </string>
    <string name="str_nav_home">Home</string>
    <string name="str_nav_settings">Courses</string>
    <string name="str_nav_exam_history">Exam History</string>
    <string name="str_feed_back">Feedback</string>
    <string name="str_bookmarks">Bookmarks</string>
    <string name="str_nav_share_app">Share App</string>
    <string name="str_subscription">Subscriptions</string>
    <string name="str_nav_log_out">Logout</string>
    <string name="str_nav_chng_pass">Change Password</string>
    <string-array name="analysis_type">

        <item>By Exam</item>
        <item>By Subject</item>

    </string-array>
    <string name="by_exam">By Exam</string>
    <string name="by_subject">By Subject</string>
    <string name="login">LOGIN</string>
    <string name="login_with_user_name">Login with your email and password</string>
    <string name="user_name">Username</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google+</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_s">Share</string>
    <string name="location">Location</string>
    <string name="allo_tag">Allow tagging</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="allo_noti">Allow Notification</string>
    <string name="rate">Rate us</string>
    <string name="terms_nd_conditions"><u>Terms of Use &amp; Privacy Policy</u></string>
    <string name="do_not_have_acc">Don\'t have account?</string>
    <string name="tc">Terms &amp; Conditions</string>
    <string name="forgot_pwd"><i>Forgot Password?</i></string>
    <string name="forgot_new_pass">New Password</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="enter_register_email">Enter registered email id</string>
    <string name="rate_experience">Rate Your Experience</string>
    <string name="rate_msg">if you enjoy using app \n would you mind ratting us,then…?</string>
    <string name="rating_error">Please select rate</string>
    <string name="feedback_mail" translatable="false">rankerspointknp@gmail.com</string>
    <string name="empty_feedback">Please Enter your Feedback</string>
    <string name="attempt_online_exms">Attempt thousands of online examinations.</string>
    <string name="tracg_progress">Track Progress. Get personalised analysis</string>
    <string name="create_ur_account">Register your Account</string>
    <string name="register"><i>Create new Account</i></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password_confirm">Password Confirmation</string>
    <string name="already_have_acc">Already have account ?</string>
    <string name="read_full_news">READ FULL NEWS</string>
    <string name="register_now">Register Now</string>
    <string name="classes">Today\'s Classes</string>
    <string name="moreclasses">More Classes</string>
    <string name="latest_exams">RBI Grade B Complete Course Batch 1</string>
    <string name="lms">Live Classes</string>
    <string name="analysis">Result</string>
    <string name="notifications">Announcement</string>
    <string name="exam_series">Exam Series</string>
    <string name="lms_series">Course Content</string>
    <string name="popular_exams">Popular Exams</string>
    <string name="popular_lms">Popular Courses</string>
    <string name="no_popular_exams">No Popular Exams</string>
    <string name="no_popular_lms">No Popular LMS</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="take_exam">Take Exam</string>
    <string name="duration">Duration</string>
    <string name="total_question">Total Questions</string>
    <string name="mark_for_review">MARK FOR REVIEW</string>
    <string name="study_pln">Daily Study Plan</string>
    <string name="exam_appo">Exam Focused Approach</string>
    <string name="expert_fac">Expert Faculty</string>
    <string name="bestmate">Best Material</string>
    <string name="title">Title</string>
    <string name="Rs">\u20B9 4499</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Want to delete this file?</string>
    <string name="delete_dis">This video will be removed from your file. You will have to download/save it again</string>
    <string name="all_ready_account">Already have an account?</string>
    <string name="mock_test">Mock Test</string>
    <string name="mock_test_sure">Are you sure you want to submit your exam test ??</string>
    <string name="time">Time</string>
    <string name="time_take">Time taken</string>
    <string name="total_mark">Total mark</string>
    <string name="expre_date">Expires on 31 Dec 2021</string>
    <string name="mock">Mock Test</string>
    <string name="correct_a">Correct (0)</string>
    <string name="Wrong_a">Wrong (0)</string>
    <string name="unattempted_a">Unattempted (0)</string>
    <string name="score">Score</string>
    <string name="rank">Rank</string>
    <string name="english">English</string>
    <string name="topic_analy">Topic analysis</string>
    <string name="sec_analy">Sectional analysis</string>
    <string name="ques_anal">Question analysis</string>
    <string name="logout_sure">Are you sure!!\nYou want to Logout?</string>
    <string name="male">Male</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gender"><u>Gender</u></string>
    <string name="female">Female</string>
    <string name="lives_in">Lives in</string>
    <string name="doubts_ans">Doubts answered</string>
    <string name="thanks_rec">Thanks received</string>
    <string name="quest_ans">Questions answered correctly</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="live_location">Current Location</string>
    <string name="type_ans">Type your answer here..</string>
    <string name="my_course">My Course Doubts</string>
    <string name="ad_image">ADD IMAGE</string>
    <string name="ad_img">1 image added</string>
    <string name="tech_issue">Technical Issue</string>
    <string name="sub_rel_doubt">Subject Related Doubt</string>
    <string name="sub_gen_doubt">General Doubt</string>
    <string name="doubt_type">Please select your question type:</string>
    <string name="doubt_title">Please write your title here</string>
    <string name="add_doubt">Add Doubt Title</string>
    <string name="add_description">Add Description</string>
    <string name="add_description_text">Please add description text here</string>
    <string name="doubt_box">Hi !!, you want to ask doubts</string>
    <string name="start_typing">Start typing here...</string>
    <string name="notes">PDF Notes</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_start">Start Quiz</string>
    <string name="date">Date</string>
    <string name="date_time">24 Jun, 05:00 PM</string>
    <string name="live_class">Live Class</string>
    <string name="about"><u>About</u></string>
    <string name="syllabus">Syllabus</string>
    <string name="about_me">About me</string>
    <string name="course_doubt">Course Doubts</string>
    <string name="course_name">Course Name</string>
    <string name="google_name">Google Pay &amp; Phone Pay</string>
    <string name="phone_name">Phone Pay</string>
    <string name="learn_yearly">Learn Yearly &amp; Monthly full classes</string>
    <string name="pre_view_class">Preview Classes</string>
    <string name="daily_quiz">Daily Quiz</string>
    <string name="video_series">Video Series</string>
    <string name="share">Invite</string>
    <string name="share_via">Share via</string>
    <string name="share_score">SHARE YOUR SCORE</string>
    <string name="previous_paper">Previous Paper</string>
    <string name="practice">Practice</string>
    <string name="coming_soon">Coming Soon...!</string>
    <string name="live_classes">Live Classes</string>
    <string name="create_post">Create Post</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="all_posts">All Posts</string>
    <string name="more">More</string>
    <string name="daily_pre">Your Daily Prep</string>
    <string name="exam_test_series">Examwise Test Series</string>
    <string name="try_free_mock">Try Free/Paid Mock Tests Inside</string>
    <string name="free_class">Free Live Classes</string>
    <string name="doubts">Doubts</string>
    <string name="recent_video">Live Classes Video</string>
    <string name="recent_video_video">Recent Video</string>
    <string name="free_mock">Free/Paid Mock Tests</string>
    <string name="mentor_posts">Mentor Posts</string>
    <string name="notes_pdf">Notes &amp; PDF</string>
    <string name="exam_info">Exam Info</string>
    <string name="less">Less</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="update_settings">Update Settings</string>
    <string name="exam_cat">Exam Categories</string>
    <string name="test_cat">Test Categories</string>
    <string name="lms_cat">LMS Categories</string>
    <string name="my_profile">My Profile</string>
    <string name="start_exam">Start Exam</string>
    <string name="start">Start</string>
    <string name="status">Status</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="enter_answer">enter answer</string>
    <string name="answer">Answer</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="answer_now">Answer Now</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="change_pwd">Change Password</string>
    <string name="role">Role</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="editprofile">EDIT PROFILE</string>
    <string name="update_profile">Update Profile</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_new_pwd">Confirm new password</string>
    <string name="update_password">Update Password</string>
    <string name="upcomingc">Upcoming Courses </string>
    <string name="talk">Talk To Us</string>
    <string name="detailfaq">Detailed FAQ\'s</string>
    <string name="fcissue">Facing issues? Please email us on </string>
    <string name="faq">FAQ\'s</string>
    <string name="subscribe">Let our experts guide you in your preparation</string>
    <string name="end_test">Submit Exam</string>
    <string name="do_u_want_submit_test">Do you really want to submit the exam ?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="pay_u">PayU</string>
    <string name="type">Type</string>
    <string name="attempts">Attempts</string>
    <string name="questions">Questions</string>
</resources>