<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardElevation="@dimen/ten_sp"
app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white_color"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/header"
                android:fontFamily="@font/myriadpro_bold"
                android:gravity="center"
                android:padding="@dimen/ten_sp"

                android:text="@string/mock_test"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/ten_sp"
    android:text="@string/mock_test_sure"
  android:fontFamily="@font/poppins"
    android:textColor="@color/black_color"
    android:textSize="@dimen/eighteen_sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_sp"
                android:layout_marginBottom="@dimen/ten_sp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/theme_purple"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/cell_cyan"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>