<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white_color"
            app:cardElevation="@dimen/ten_sp"
            android:id="@+id/card_pay"
            app:cardCornerRadius="@dimen/five_dp"
            app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_margin="@dimen/five_dp"
            android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
          android:layout_weight="1"
            android:textColor="@color/black_color"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:id="@+id/txt_course"
                android:layout_weight="2"
                android:textColor="@color/theme_pink"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_margin="@dimen/five_dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_weight="1"
                android:textColor="@color/black_color"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:id="@+id/txt_type"
                android:layout_weight="2"
                android:textColor="@color/black_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_margin="@dimen/five_dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_weight="1"
                android:textColor="@color/black_color"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:id="@+id/txt_date"
                android:layout_weight="2"
                android:textColor="@color/black_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_margin="@dimen/five_dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_weight="1"
                android:textColor="@color/black_color"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:id="@+id/txt_amount"
                android:layout_weight="2"
                android:textColor="@color/black_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_margin="@dimen/five_dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_weight="1"
                android:textColor="@color/black_color"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:id="@+id/txt_status"
                android:layout_weight="2"
                android:textColor="@color/theme_purple"/>

        </LinearLayout>

    </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_success"
        android:layout_width="@dimen/sixty_dp"
        android:layout_height="@dimen/sixty_dp"
        android:layout_alignParentRight="true"
        android:padding="@dimen/six_dp"
        android:src="@drawable/ic_success" />

</RelativeLayout>